--- a/index.html
+++ b/index.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/style.css">
+
   <title>Frontend Mentor | Single Price Grid Component</title>
 
 </head>
+
 <body>
-  Join our community
+  <main>
+    <!-- PRIMER BOX -->
+    <div class="box1">
 
-  30-day, hassle-free money back guarantee
+      <div><h2>Join our community</h2></div>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+      <div class="guarantee"> 30-day, hassle-free money back guarantee</div>
 
-  Monthly Subscription
+      <div class="box1_p"> Gain access to our full library of tutorials along with expert code reviews.
+        Perfect for any developers who are serious about honing their skills.</div>
+    </div>
+     <!-- SEGUNDO BOX -->
+    <div class="box2">
+      <div> <h2>Monthly Subscription</h2></div>
 
-  &dollar;29 per month
+      <div class="box2_price">
+        <span>&dollar;29</span>
+        <span>per month</span>
+      </div>
 
-  Full access for less than &dollar;1 a day
+      <div class="box2_p"> Full access for less than &dollar;1 a day</div>
 
-  Sign Up
+      <div class="box2_button">
+        <button> Sign Up</button>
+      </div>
 
-  Why Us
+    </div>
+    <!-- TERCER BOX -->
+    <div class="box3">
+      <div><h2>Why Us</h2></div>
+     
+      <p> Tutorials by industry experts
+        Peer &amp; expert code review
+        Coding exercises
+        Access to our GitHub repos
+        Community forum
+        Flashcard decks
+        New videos every week</p>
+     
+    </div>
+  </main>
 
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Gadea
+
+      </a>.
     </p>
   </footer>
 </body>
+
 </html>
